k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  labels:
    app.kubernetes.io/part-of: lead-management-system
